# Commercial-Multi-Agent-App

./: README.md  main.py  pyproject.toml
Manus-Replica/api/: .env.example
Notes/: Agent设计模式.md
manus-replica/api/: .env.example  README.md
manus-replica/api/alembic/: README.md  env.py
manus-replica/api/alembic/versions/: dcc565219f2c_create_demos_table.py
manus-replica/api/app/: README.md  main.py
manus-replica/api/core/: config.py
manus-sample-code/demo-code/: README.md  demo-agent.py  demo-llm.py  requirements.txt
sample-code/A2A protocol code/ui/: debug_agent_card.py
sample-code/A2A protocol code/weather/: __main__.py  agent_executor.py  pyproject.toml
sample-code/a2a-protocol-sample-code/: agent_executor.py  client.py  httpx_a2a.py  main.py  pyproject.toml
sample-code/a2a-sample-code/ui/: .env.example  demo.py  main.py
sample-code/a2a-sample-code/weather/: deepseek_react_agent.py
sample-code/demo-code/: .env.example  pyproject.toml
sample-code/test-code/: .env.example  DeepSeek API流式调用.py  DeepSeek API调用.py  DeepSeek JSON Output示例.py  DeepSeek语音播报助手.py  FastAPI-Demo.py  Kimi多模态API测试.py  OpenAI SDK重构代码.py  OpenAI SDK重构多模态LLM调用.py  Pydantic结合Tool Calls实现数据提取.py  Pydantic解析数据.py  ReAct+CoT实现企业业务表单填写.py  mcp-bash.py  mcp-client-connect-api.py  mcp-client-demo.py  mcp-client-with-exit-stack.py  mcp-code.py  mcp-external-api-coze.py  mcp-external-api.py  mcp-server-demo-httpstream.py  mcp-server-demo-stdio.py  mcp-server-with-ReAct-Agent.py  为ReAct Agent添加计算工具.py  使用流式输出提升响应速度.py  同步咖啡店.py  异步咖啡店.py  无MCP SDK调用高德MCP.py  计算消息上下文长度.py
(+28 files in other folders)
