[project]
name = "commercial-multi-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "openai>=2.15.0",
    "pydantic[email]>=2.12.5",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "transformers>=4.57.5",
    "werkzeug>=3.1.5",
]
