[project]
name = "commercial-multi-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a>=0.44",
    "asyncpg>=0.31.0",
    "cos-python-sdk-v5>=1.9.41",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "mcp>=1.25.0",
    "mesop>=1.2.0",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "redis>=7.1.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.45",
    "transformers>=4.57.5",
    "uuid>=1.30",
    "uvicorn[standard]>=0.40.0",
    "werkzeug>=3.1.5",
]

[tool.uv.workspace]
members = [
    "Manus-Replica/api",
]
